--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -1,6 +1,12 @@
 # Copyright (c) 2022 Darryl deHaan
 # SPDX-License-Identifier: MIT
 
+# Enables a combination of settings that are planned to be default in future
+# versions of ZMK to improve connection stability. This includes changes to
+# timing on BLE pairing initiation, restores use of the updated/new LLCP
+# implementation, and disables 2M PHY support.
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
 # go to sleep after one hour (1*60*60*1000ms)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_SLEEP=y
@@ -53,3 +59,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
 
 #soft off
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+### ZMK STUDIO
+# https://github.com/zmkfirmware/zmk/blob/main/docs/docs/config/studio.md
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
