Update README and configuration files for improved setup instructions and stability

--- a/build.yaml
+++ b/build.yaml
@@ -3,6 +3,7 @@ include:
   - board: eyelash_sofle_left
     shield: nice_view_gem
     snippet: studio-rpc-usb-uart
+    make-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
     artifact-name: eyelash_sofle_left
   - board: eyelash_sofle_right
     shield: nice_view_gem
