Fix shield name in build.yaml and update west.yml to include hammerbeam-slideshow project

--- a/config/west.yml
+++ b/config/west.yml
@@ -39,5 +39,8 @@ manifest:
     - name: zmk-nice-oled
       remote: mctechnology17
       revision: main
+    - name: hammerbeam-slideshow
+      remote: gpeye
+      revision: main
   self:
     path: config
