--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: eyelash_sofle_central_dongle dongle_display
+    shield: eyelash_sofle_central_dongle dongle_screen
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
     artifact-name: eyelash_sofle_central_dongle_oled
